tools/tests/ui/fail/l1017.cnf
// Test file for error code: L1017
// Expected error: Invalid Semantic character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
